// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttonv2 Centered 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonStyle-29 makeStyles-buttonStyle-30"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#4CAF51",
        "border": "none",
        "color": "#fff",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Default State 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonStyle-25 makeStyles-buttonStyle-26"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "border": "1px solid #4CAF51",
        "color": "#4CAF50",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Disabled 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonStyle-23 makeStyles-buttonStyle-24 Mui-disabled Mui-disabled"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#E7ECEF80",
        "border": "none",
        "color": "#cbcdcf",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Loading 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonStyle-31 makeStyles-buttonStyle-32 Mui-disabled Mui-disabled"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#4CAF51",
        "border": "none",
        "color": "#fff",
      }
    }
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Main 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonStyle-17 makeStyles-buttonStyle-18"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#4CAF51",
        "border": "none",
        "color": "#fff",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Secondary Gray 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonStyle-21 makeStyles-buttonStyle-22"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "border": "1px #9CB2BD80 solid",
        "color": "#707070",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 Secondary Line Pink 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonStyle-19 makeStyles-buttonStyle-20"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "border": "1px #CB007B solid",
        "color": "#CB007B",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttonv2 State 6 1`] = `
<div
  dir="rtl"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonStyle-27 makeStyles-buttonStyle-28"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "#CB007B",
        "border": "none",
        "color": "#fff",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      אישור והמשך
    </span>
  </button>
</div>
`;
